another spacing issue, fixes #2164

--- a/app/stylesheets/ui_base/_base.sass
+++ b/app/stylesheets/ui_base/_base.sass
@@ -685,6 +685,8 @@ nav#tabs
   display: block
 #settings-form
   +clearfix
+  p
+    padding-bottom: 10px
   div
     display: block
     #group_avatar_image_file
